2001-06-07  Adam Fedor  <fedor@gnu.org>

	* aclocal.m4: Add special case for cygwin in CON_AUTOLOAD.

2001-06-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSAttributedString.m: When caching attribute dictionaries
	we make an immutable copy of the dictionary with shallow copy.

2001-06-06  Nicola Pero  <n.pero@mi.flashnet.it>

	Configuration part of constant string support with gcc-3.0
	* config/config.constant-string-class.m: New config test.
	* configure.in: Added test for -fconstant-string-class option in
	compiler, by compiling and running config.constant-string-class.m.
	Output different NX_CONST_STRING_CLASS and
	NX_CONST_STRING_CPPFLAGS depending on results of this test.
	* base.make.in (CONFIG_SYSTEM_INCL): Added
	NX_CONST_STRING_CPPFLAGS.
	* Headers/gnustep/base/GSConfig.h.in: Renamed NXCONST to
	NX_CONST_STRING_CLASS.
	* configure: Updated.

2001-06-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSScanner.m: ([scanHexInt:]) fix for scanning number
	consisting just of a zero.  Reported by Tom Koelman

2001-06-06  Richard Frith-Macdonald <rfm@gnu.org>

	Changes for constant string support with gcc-3.0
	* configure.in: Just substitute NXCONST
	* Headers/gnustep/base/GSConfig.h.in: Use NXCONST to redefine
	NXConstantString
	* Headers/gnustep/base/NSString.h: new constantStringClass method.
	* Source/GSString.m: new constantStringClass method.
	* Source/NSObject.m: Use NSConstantStringClass.
	* Source/NSScanner.m: Use NSConstantStringClass.
	* Source/NSString.m: implement constantStringClass method.

2001-06-06  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/mframe.m: Reactivated inling nested functions after 
	gcc 3.0 was fixed to compile them again.

2001-06-05  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile: If GNUSTEP_MAKEFILES is not set, tell the user it
	needs to source GNUstep.sh and then exit with an error.

2001-06-05  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/mframe.m: Disabled inlining of nested functions.  This